Little fix with margin bottom footer on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
   width: 95%;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 0;
 }
 h2,
 h4 {
